--- a/doc/dissertation/resources/bibliography.bib
+++ b/doc/dissertation/resources/bibliography.bib
@@ -800,7 +800,8 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
 @article{kulkarnitranspiler,
   title={Transpiler and it’s Advantages},
   author={Kulkarni, Rohit and Chavan, Aditi and Hardikar, Abhinav},
-  publisher={Citeseer}
+  publisher={Citeseer},
+  year = {2015},
 }
 
 @article{a2001atmol,
@@ -906,7 +907,7 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
 
 @misc{haskellstack,
   title = {The Haskell Tool Stack},
-  author = {Stack Contributors},
+  author = {Stack{\ }Contributors},
   howpublished = {\url{https://docs.haskellstack.org/en/stable/README/}},
   note = {Accessed: 2017-04-15},
   year = 2017
@@ -914,7 +915,7 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
 
 @misc{git_scm,
   title = {Git},
-  author = {The Git Foundation},
+  author = {The{\ }Git{\ }Foundation},
   howpublished = {\url{https://git-scm.com/}},
   note = {Accessed: 2017-04-15},
   year = 2017
@@ -922,7 +923,7 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
 
 @misc{sublime_text,
   title = {Sublime Text: The Text Editor You'll Fall in Love With},
-  author = {Sublime HQ},
+  author = {Sublime{\ }HQ},
   howpublished = {\url{https://www.sublimetext.com/}},
   note = {Accessed: 2017-04-15},
   year = 2017
@@ -982,4 +983,12 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
   howpublished = {\url{https://hackage.haskell.org/package/tasty}},
   note = {Accessed: 2017-04-18},
   year = 2017
+}
+
+@misc{incomplete_iry,
+  title = {A Brief, Incomplete and Mostly Wrong History of Programming Languages},
+  author = {James Iry},
+  howpublished = {\url{https://hackage.haskell.org/package/tasty}},
+  note = {Accessed: 2017-04-28},
+  year = 2009
 }
