--- a/doc/dissertation/resources/conclusion.tex
+++ b/doc/dissertation/resources/conclusion.tex
@@ -1,13 +1,13 @@
 \chapter{Conclusion} % (fold)
 \label{cha:conclusion}
 As a project, \gls{absol} has been a great success.
-Despite the numerous failures of the project, the end result is a novel contribution to the state of the art in language verification. 
+Despite several failures of the project, the end result is a novel contribution to the state of the art in language verification. 
 Despite the flaws in both the metalanguage and metacompiler, the achievements of this project cannot be ignored. 
 The main successes of this project are twofold:
 \begin{itemize}
-    \item \textbf{Advancing the State of the Art in Language Verification:} The combination of the integrated syntactic and semantic specification in the form of \gls{metaspec}, and the novel verification algorithms implemented in \gls{absol} itself, this project provides two major novel contributions to the language verification ecosystem.
+    \item \textbf{Advancing the State of the Art in Language Verification:} With the combination of the integrated syntactic and semantic specification in the form of \gls{metaspec}, and the novel verification algorithms implemented in \gls{absol} itself, this project provides two major novel contributions to the language verification ecosystem.
     \item \textbf{An Extensible Metacompiler:} The final version of the metacompiler is a functional and extensible solution to the language verification problem for \glspl{dsl} with limited semantics.
-    It allows the language designers to create in relative safety, providing clear and concise diagnostics to help diagnose errors.
+    It allows the language designers to create \glspl{dsl} in relative safety, providing clear and concise diagnostics to help locate and rectify errors.
 \end{itemize}
 
 As a tool, \gls{absol} came very close to meeting its initial project goals, with only the omission of the code-generation step really marring that record. 
@@ -17,12 +17,12 @@ With the implementation of the remaining system components as outlined in \autor
 
 During the development of this system, the metalanguage and algorithmic design processes went incredibly smoothly, resultant from the weeks of careful thought that had been put into both. 
 This meant that the corresponding development proceeded well, working directly from these comprehensive designs.
-Conversely, the lack of rigid processes imposed on the development and testing of the system, resulted in a not-insignificant number of bugs being found far later than was ideal.
+Conversely, the lack of rigid processes imposed on the development and testing of the system resulted in a not-insignificant number of bugs being found far later than was ideal.
 Despite this, the system works as intended (even though it's not \textit{quite} complete), and its operational nature is a big success. \\
 
 The final result, then, is this: \gls{absol}, while a flawed system, is a complex and powerful tool for the creation of provably correct \glspl{dsl}. 
-It has produced novel contributions to the state of the art in language verification through the creation of the \gls{metaspec} metalanguage and the dual-part semantic verification engine that allows automated semantic verification while retaining useful language semantics.
+It has produced novel contributions to the state of the art in language verification through the creation of the \gls{metaspec} metalanguage and the dual-part semantic verification engine that allows automated semantic verification while retaining useful language capabilities.
 It hence fills a niche in the language verification ecosystem, bridging the gap between complex semantic systems and systems so inflexible as to be unusable.
-While it still needs some work, the future is bright, with \gls{absol} both having a clear path for further development, and advancing the state of the art. 
+While it still needs some work, the future is bright, with \gls{absol} both having a clear path for further development, and advancing the state of the art in language verification. 
 
 % chapter conclusion (end)
