--- a/doc/dissertation/resources/literature_survey.tex
+++ b/doc/dissertation/resources/literature_survey.tex
@@ -1,42 +1,39 @@
 \chapter{Literature and Technology Survey} % (fold)
 \label{cha:literature_and_technology_survey}
-As the project has proposed the investigation and development of a toolchain for the creation of provably-correct \glspl{dsl}.
+The project has proposed the investigation and development of a toolchain for the creation of provably-correct \glspl{dsl}.
 Even with the scope constrained to the creation of \glspl{dsl} alone, such a project draws on a significant breadth of disciplines within Computer Science, necessitating a broad knowledge-base. \\
 
-This project exists at the intersection of the study of \glspl{dsl}, programming language development and formalisations of program semantics. 
+\gls{absol} exists at the intersection of the study of \glspl{dsl}, the development of programming languages, and formalisations of program semantics. 
 As such, it is important to understand the relevant work in these domains. 
 While each of these fields is large in its own right, this review aims to distil the relevant bodies of knowledge. \\
 
 This document provides a broad understanding of domain-specific languages, including their types, uses and limitations.
-Additionally, it explores the state-of-the-art methods for specifying language syntax and semantics, with an accompanying critical evaluation of these techniques.\\
-
+Additionally, it explores the state-of-the-art methods for specifying language syntax and semantics, with an accompanying critical evaluation of these techniques.
 The second portion of this review examines methods for formal program verification while identifying the limitations of these techniques as they exist today. 
 Finally, it provides an examination of techniques for automated compiler generation, and a discussion of relevant technologies to support such tasks. 
 
 \section{Domain Specific Languages} % (fold)
 \label{sec:domain_specific_languages}
-\defblock{12cm}{DSL}{``A Domain-Specific Language (DSL) is a programming language or executable specification language that offers, through appropriate notations and abstractions, expressive power focused on ... a particular problem domain'' \citep{van2000domain}}
+\defblock{12cm}{DSL}{``A Domain-Specific Language (DSL) is a programming language or executable specification language that offers, through appropriate notations and abstractions, expressive power focused on ... a particular problem domain'' \citep[pg. 26]{van2000domain}}
 
-While a Turing-Complete General-Purpose Programming Language (GPL) is capable of expressing any computation that can be imagined, \citet{fowler2010domain} finds that it is often the case that the use of a GPL provides the wrong level of abstraction in a problem domain.
-When attempting to express domain knowledge and domain rules using a GPL, there is often a mismatch between the GPL and the knowledge to be expressed. 
-DSLs allow expression of solutions ``at the level of abstraction of the problem domain'' \citep{van2000domain}.\\
+While a Turing-Complete, General-Purpose Programming Language (GPL) is capable of expressing any algorithm that can be executed on a standard computer, \citet{fowler2010domain} finds that it is often the case that the use of a \gls{gpl} provides the wrong level of abstraction in a problem domain.
+When attempting to express domain knowledge and domain rules using a \gls{gpl}, there is often a mismatch between the \gls{gpl} and the knowledge to be expressed. 
+\glspl{dsl}, instead, allow for the expression of solutions ``at the level of abstraction of the problem domain'' \citep[pg. 27]{van2000domain}.\\
 
-Use of a DSL allows an encoding of ``bits of important logic that [don't] fit well within [GPLs]'', allowing an expression of domain-expert knowledge at a higher level of abstraction \citep{fowler2010domain,van2000domain}. 
-This embodiment of domain knowledge, was found by \citet{fowler2010domain} to ``enable a much richer communication channel'' between programmers and domain experts, allowing domain-experts to interact with the configuration and behaviour of complex software systems. \\
+Use of a \gls{dsl} allows an encoding of ``bits of important logic that [don't] fit well within [GPLs]'', allowing an expression of domain-expert knowledge at a higher level of abstraction \citep{fowler2010domain,van2000domain}. 
+This embodiment of domain knowledge was found by \citet{fowler2010domain} to ``enable a much richer communication channel'' between programmers and domain experts, allowing domain-experts to interact with the configuration and behaviour of complex software systems. \\
 
-The term `DSL' encompasses a family of languages, as discussed in Section~\ref{sub:types_of_dsls}, so the definition provided by \citet{van2000domain} at the start of this section is perhaps too restrictive. 
-DSLs encompass a wide range of programming styles, from declarative to functional, and a similarly varied set of execution models. 
-However, in all cases the ``DSLs trade generality for expressiveness in a given domain'', and so the DSL approach should be chosen to maximise that expressiveness \citep{Mernik:2005:DDL:1118890.1118892}. \\
+The term `\gls{dsl}' encompasses a family of languages, as discussed in Section~\ref{sub:types_of_dsls}, so the definition provided by \citet{van2000domain} at the start of this section is perhaps too restrictive. 
+\glspl{dsl} encompass a wide range of programming styles, from declarative to functional, and a similarly varied set of execution models. 
+However, in all cases the ``DSLs trade generality for expressiveness in a given domain'', and so the \gls{dsl} approach should be chosen to maximise that expressiveness \citep[pg. 317]{Mernik:2005:DDL:1118890.1118892}. \\
 
 While DSLs offer significant benefits in their encapsulation of domain knowledge, there is significant challenge in creating a DSL to accurately reflect the domain. 
 \citet{fowler2010domain} states that DSLs take ``narrow parts of programming'' and make them ``easier to understand and therefore quicker to write, quicker to modify and less likely to breed bugs''. 
 Such a statement, however, is only true if the DSL has been implemented correctly, with ``a solid understanding of the domain'' \citep[pg. 1]{bosch1997domain}.\\
 
 Even with such an understanding of the domain, it is possible to make mistakes in the DSL compiler, known as an \textit{application generator}.
-Through automatic generation of such tools, this project aims to support the correct implementation of formally correct DSLs, hence avoiding the potential for mistakes in tooling. 
+Through automatic generation of such tools, this project aims to support the correct implementation of formally correct DSLs through avoiding the potential for mistakes in tooling. 
 Such constraints on the DSL make it much more difficult to make damaging mistakes in systems where the DSL is in use. 
-
-% While DSLs have multiple disadvantages (including the cost, limited availability, scoping and balance with the host language), this project deals with the support of correct use of DSLs, and through the generation of embeddable DSLs will help to constrain DSL scope. 
 
 \subsection{Types of DSLs} % (fold)
 \label{sub:types_of_dsls}
@@ -74,7 +71,7 @@ The taxonomy of \citet{Mernik:2005:DDL:1118890.1118892} conflates the execution 
     \item \textbf{Embedding:} The creation of constructs (new abstract data-types and operators) in a GPL to model a given domain.
     This is most commonly found in the form of an application library. 
     \item \textbf{Compiler Extension:} Extension of an existing compiler or interpreter with domain-specific optimisation rules (e.g. Template Haskell Optimisation Rules, as discussed in Section~\ref{sec:technological_support}).
-    \item \textbf{COTS:} Application of existing tools and notations to a new problem domain. 
+    \item \textbf{Commercial Off-The-Shelf (COTS):} Application of existing tools and notations to a new problem domain. 
     \item \textbf{Hybrid:} Any combination of the above approaches. 
 \end{itemize}
 
@@ -111,7 +108,7 @@ exponent      ::=  ("e" | "E") ["+" | "-"] digit+
     (coverage sat) (location gs)]
         \end{lstlisting}
     \end{itemize}
-    Some of these classifications are somewhat imprecise, however, and could benefit from further clarification.
+    Some of these classifications are imprecise, however, and could benefit from further clarification.
     Nevertheless, the most important observation made on this classification axis is that not all DSLs must be executable.
     Domain-specific rules can be encoded as static configuration as well as executable specification, a facet that was left un-addressed by the taxonomy proposed by \citet{van2000domain}.
     \item \textbf{Resuability:} The nature of a DSL is to encapsulate domain-specific logic, configuration and behaviour. 
@@ -132,9 +129,8 @@ This is very important to the progress of this project, as it proposes to produc
 With many DSLs acting as portable stores of domain-specific logic and configuration, the impact of errors in DSL implementations is potentially exacerbated.\\
 
 In situations of reuse, an incorrectly implemented DSL will carry the same implementation flaws to everywhere that it is used.
-Resultant from this, \citet{Mernik:2005:DDL:1118890.1118892} stresses the importance of performing the domain analysis phase correctly, as the results of such an analysis may persist for a long time. \\
-
-If a DSL is going to persist for some time, it is all the more important that the domain analysis be correctly translated into the DSL implementation. 
+Resultant from this, \citet{Mernik:2005:DDL:1118890.1118892} stresses the importance of performing the domain analysis phase correctly, as the results of such an analysis may persist for a long time. 
+If a DSL is going to persist for some time, it is all the more important that the domain analysis be correctly transformed into the DSL implementation. 
 
 % subsubsection implementation_errors_in_dsls (end)
 
@@ -143,10 +139,10 @@ If a DSL is going to persist for some time, it is all the more important that th
 \citet{Mernik:2005:DDL:1118890.1118892} claims that the application generator or compiled DSL approach and the embedded approach are the two most common DSL implementation strategies. 
 As a result, the paper provides a detailed analysis of these strategies. \\
 
-Compiled DSLs, in a general sense, is a category that encompasses any DSL that is translated directly to executable code, whether that be by an interpreter or compiler \citep{Mernik:2005:DDL:1118890.1118892}. 
+Compiled DSLs, in a general sense, is a category that encompasses any DSL that is translated directly to executable code, whether by an interpreter or compiler \citep{Mernik:2005:DDL:1118890.1118892}. 
 Building such tools from scratch allows these DSLs to match the notation of domain experts as closely as possible, significantly reducing the cognitive load required to translate domain rules into program code \citep{fowler2010domain}.
 The compiled approach allows opportunities for domain-semantics-related error reporting, rather than reporting based on the semantics of a host language.
-Furthermore, it provides opportunities for domain-specific Analysis, Verification, Optimisation, Parallelisation and Transformation (AVOPT) that are unparalleled by other approaches \citep{Mernik:2005:DDL:1118890.1118892}.\\
+Furthermore, it provides opportunities for domain-specific \gls{avopt} that are unmatched by other approaches \citep{Mernik:2005:DDL:1118890.1118892}.\\
 
 Such DSLs are not without their downsides, however, as they require significant development effort due to the requirement for a complex language processor. 
 Such processors are rarely designed with extension in mind, resulting in alterations to the DSL being difficult to achieve. 
@@ -160,13 +156,13 @@ Embedded DSLs, however, suffer significantly from suboptimal syntax and semantic
 While some languages such as Lisp/Scheme allow arbitrary syntax extensions, in most cases this can produce a confusing mismatch between the domain knowledge and its representation \citep{jennings1999verischemelog}. 
 These host language restrictions also manifest in the form of error reporting. 
 This will take place in terms of the host language constructs, causing a conceptual mismatch between the domain and the language. 
-Furthermore, \citet{Mernik:2005:DDL:1118890.1118892} suggests that the embedded approach restricts AVOPT, though there are some languages that can assist with this \citep{seefried2004optimising}.\\
+Furthermore, \citet{Mernik:2005:DDL:1118890.1118892} suggests that the embedded approach restricts \gls{avopt}, though there are some languages that can assist with this \citep{seefried2004optimising}.\\
 
 While these categories were established by \citet{van2000domain}, \citet{Mernik:2005:DDL:1118890.1118892} recognises that these approaches are less restricted than they were initially credited as being. 
 These two approaches are again corroborated by \citet{fowler2010domain}, who proposes the concepts of Internal DSLs (written in the host language and exposed via an API) and External DSLs (languages with their own semantics parsed independently of the host language). \\
 
 It seems possible to utilise a hybrid approach that combines the syntactic and semantic freedom of compilation with the language power of embedding. 
-Such an approach is discussed in Section~\ref{ssub:transpilation} below. 
+Such an approach is discussed in \nameref{ssub:transpilation} below. 
 
 % subsubsection detailed_implementation_strategies (end)
 
@@ -174,8 +170,8 @@ Such an approach is discussed in Section~\ref{ssub:transpilation} below.
 \label{ssub:transpilation}
 All of these classification systems, while useful, fail to explicitly recognise an additional implementation strategy: transpilation. \\
 
-While transpiling a language can technically be classified under `hybrid' the transpilation process, as defined by \citet{Mernik:2005:DDL:1118890.1118892}, parses the source language into its Abstract Syntax Tree (AST).
-The semantics associated with the nodes in the AST are then used to generate code in the target language \citep[pg. 4]{Bouraqadi:2016:MPT:2991041.2991051}.
+While transpiling a language can technically be classified under `hybrid' approaches, the transpilation process, as defined by \citet{Mernik:2005:DDL:1118890.1118892}, parses the source language into its Abstract Syntax Tree (AST).
+The semantics associated with the nodes in the AST are then used to generate code in the target language \citep{Bouraqadi:2016:MPT:2991041.2991051}.
 This aims to totally preserve the semantics of the source language, while encapsulated in the different target language. \\
 
 The transpilation process combines some benefits of both the compiled and embedded DSL approaches \citep{kulkarnitranspiler}.
@@ -209,7 +205,7 @@ Some of the key uses are listed below:
 \begin{itemize}
     \item A ``common text that acts both as executable software and a description that domain experts can read to understand how their ideas are represented in a system'' \citep{fowler2010domain}.
     Much of the literature focuses on DSLs as enablers of communication through defining important program concepts in terms of the domain at hand.
-    \item A form of ``end-user programming'', where domain experts are able to use programming to perform tasks or otherwise configure their tools \citep{van2000domain}.
+    \item A form of `end-user programming', where domain experts are able to use programming to perform tasks or otherwise configure their tools \citep{van2000domain}.
     \item A portable form of domain-specific rules, configuration and behaviour. 
     Such ``executable specifications'', as they are termed in \citet{fabry2015taxonomy} provide a centralised repository of domain knowledge in a form that is easy to understand and reason about. 
     \item Improving testability and allowing validation of domain logic through expression of the logic in domain concepts \citep{van2000domain}.
@@ -231,7 +227,7 @@ To that end, it is important to ensure that the resultant DSL accurately capture
 
 \subsection{Designing Domain-Specific Languages} % (fold)
 \label{sub:designing_domain_specific_languages}
-The design of DSLs can be a task that is ``sometimes error-prone and usually time-consuming'' \citep{karsai2014design}. 
+The design of DSLs can be a task that is ``sometimes error-prone and usually time-consuming'' \citep[pg. 1]{karsai2014design}. 
 This is due to the complex domain-analysis process that has to take place, elucidating the relevant domain constructs and semantics into a form ready for implementation. \\
 
 Despite this difficulty, tool support for the design of DSLs usually encompasses the implementation phase, with little support for the analysis phase. 
@@ -263,27 +259,27 @@ The choice of implementation strategy and design for a DSL should hence be made 
 
 \section{Metalanguages} % (fold)
 \label{sec:metalanguages}
+% TODO Can revisions to this section and the next make things more engaging? Or does that risk clarity?
 \defblock{10.5cm}{\Glsname{metalanguage}}{\glsdesc*{metalanguage}}
 
 As implementing verifiable DSLs requires formal descriptions of both the syntax and semantics of a DSL, it necessarily involves the use of one or more metalanguages. \\
 
-Various aspects of DSLs are usually ``developed in terms of specialised metalanguages'', and it is often true that these languages are DSLs themselves \citep{Mernik:2005:DDL:1118890.1118892}.
+Various aspects of DSLs are usually ``developed in terms of specialised metalanguages'', and it is often true that these languages are DSLs themselves \citep[pg. 334]{Mernik:2005:DDL:1118890.1118892}.
 These metalanguages are concerned with the specification of a property or some set of properties of the DSL such as its syntax or semantics. \\
 
 Metalanguages are used to make user-defined abstractions into first-class citizens through accurate description of the abstraction \citep{Siek:2010:GPL:1706356.1706358}.
-To this end, the project needs to create a combined notation, in itself a DSL, for the specification of both syntax and semantics of a DSL. \\
-
-With the field having been in development for ``more than 40 years'', there is a wide variety of metalanguages in use today for the specification of language syntax and semantics \citep{Zhang:2004:SSD:981009.981013}. 
+To this end, the project needs to create a combined notation, in itself a DSL, for the specification of both syntax and semantics of a DSL. 
+With the field having been in development for ``more than 40 years'', there are a wide variety of metalanguages in use today for the specification of language syntax and semantics \citep{Zhang:2004:SSD:981009.981013}. 
 This section aims to explore and evaluate these techniques. 
 
 \subsection{Specifying Language Syntax} % (fold)
 \label{sub:specifying_language_syntax}
+The syntax of a language defines the formal relationships between the language components (known as non-terminal symbols), and thereby provides a structured description of the valid strings in a language. 
+Such formal definitions have three main uses in that they name the syntactic elements, define the valid sentences and provide the syntactic structure of sentences in the language \citep{Scowen:1982:SSM:947912.947917,standard1996ebnf}.
+
 \defblock{11.8cm}{Syntax}{
     Programming language syntax refers to the ways in which language symbols may be combined to create well-formed sentences (otherwise known as programs) in a given languages \citep[pg. 1]{slonneger1995formal}.
 }
-
-The syntax of a language defines the formal relationships between the language components (known as non-terminal symbols), and thereby provides a structured description of the valid strings in a language. 
-Such formal definitions have three main uses in that they name the syntactic elements, define the valid sentences and provide the syntactic structure of sentences in the language \citep{Scowen:1982:SSM:947912.947917,standard1996ebnf}.
 
 Languages are defined by a grammar $<\Sigma,N,P,S>$, which consists of four parts \citep{slonneger1995formal}:
 \begin{enumerate}
@@ -352,7 +348,7 @@ These extensions can be used to specify meta-rules about the productions of the 
 \end{itemize}
 
 % subsubsection extended_backus_naur_form (end)
-
+\newpage
 \subsubsection{Abstract Syntax} % (fold)
 \label{ssub:abstract_syntax}
 \defblock{12cm}{\acrshort{ast}}{\glsdesc*{gls-ast}}
@@ -361,10 +357,10 @@ While the EBNF definition of a programming language is sometimes referred to as 
 This is produced from a derivation tree (a tree showing the parsed result of a program expression) by removing any information only required by the parser.\\
 
 This simplification enables the abstract syntax to communicate the structure of phrases in terms of their semantics in the programming language, and the rules for producing an AST are similar to the EBNF grammar for the language \citep{slonneger1995formal}.
-However, the AST rules factor out any extraneous detail to help define the language semantics. \\
+However, the AST rules factor out extraneous detail to define the language semantics. \\
 
 Nodes in an AST denote constructs in the source code of the program, and it is abstract in the sense that the tree will not explicitly represent all elements of the original source (e.g. grouping by parentheses may be implicit). 
-This relationship between concrete and abstract syntax is defined by a relation $\text{unparse} : \text{AST} \mathgoesto \text{concrete syntax}$.
+This relationship between concrete and abstract syntax is defined by a relation $\textit{unparse} : \textit{AST} \mathgoesto \textit{concrete syntax}$.
 This relation is, ideally, a function, and so restrictions are usually placed on the canonical representations for concrete phrases to disambiguate the reversal process. 
 Correct application of unparse to the AST is able to demonstrate the correctness of the parsing algorithm \citep[pg. 29]{slonneger1995formal}.
 
@@ -381,7 +377,7 @@ Correct application of unparse to the AST is able to demonstrate the correctness
     These definitions differ due to the multitude of semantic options available. 
 }
 
-Much of the literature agrees that formal semantic description is key to the design of and reasoning about programming languages \citep{Zhang:2004:SSD:981009.981013,mosses1986use,Binsbergen:2016:TSC:2892664.2893464}.
+Much of the literature agrees that formal semantic description is key to the design of, and reasoning about, programming languages \citep{Zhang:2004:SSD:981009.981013,mosses1986use,Binsbergen:2016:TSC:2892664.2893464}.
 However, most common semantic description methods are inadequate for describing the complex semantics of real-world GPLs, meaning that most language standards use natural-language descriptions of semantics, leaving much scope for ambiguity \citep{mosses1986use}.
 This inadequacy is compounded by an almost complete lack of tooling to support the formal semantic definition of programming languages \citep{Binsbergen:2016:TSC:2892664.2893464}.\\
 
@@ -390,7 +386,7 @@ As the parser is a program that maps syntactically valid strings to an AST, prog
     f_s(\text{abstract syntax}) \mathgoesto \text{semantics}
 \end{equation}
 
-\citet{mosses1992action} defines two semantic functions to be equivalent at a given level of decomposition if two phrases of program syntax are interchangeable without altering the meaning of the program. 
+\citet{mosses1992action} defines two semantic functions to be equivalent, at a given level of decomposition, if two phrases of program syntax are interchangeable without altering the meaning of the program. 
 Consider, for example, the following Haskell code:
 \begin{lstlisting}[language=haskell]
 let x = sort(xs)
@@ -525,7 +521,7 @@ An example of action semantics can be seen below \citep{Zhang:2004:SSD:981009.98
     \textbf{execute} \llbracket x := a \rrbracket = (\text{evaluate } a \textbf{ then } \text{store the primitive value in the cell bound } x)
 \end{equation}
 
-Action Semantics, however, is limited in that ``not all programming language concepts can be directly represented within action semantics'' \citep{wansbrough1997modular}. 
+Action Semantics, however, is limited in that ``not all programming language concepts can be directly represented within action semantics'' \citep[pg. 3]{wansbrough1997modular}. 
 This restriction is imposed by the set of computational constructs originally envisioned by \citet{mosses1992action}, with the system proving hard to extend.\\
 
 In the search for a more modular system, \citet{wansbrough1997modular} proposed a system called Modular Monadic Action Semantics (MMAS) based upon both Action Semantics and the earlier Modular Monadic Semantics.
@@ -604,7 +600,7 @@ Coinduction allows reasoning about the termination properties of codata, but is 
 Through a separation of data and codata, it is possible to define a language whose semantics can be reasoned about purely by well-founded induction, as defined by \citet{nordstrom1988terminating}. 
 This encompasses proofs on arbitrary length, finite data structures (those that are, hence, well-formed); inductive reasoning applied to such structures is guaranteed to reach a base-case, as examined in Godel's System-T and System-F \citep{alves2010godel,girard1989proofs}.\\
 
-This would, hopefully, allow it to be shown that all well-formed programs in the language terminate and behave according to their specification (i.e. that they are \textit{correct}.\\
+This would, hopefully, allow it to be shown that all well-formed programs in the language terminate and behave according to their specification (i.e. that they are \textit{correct}).\\
 
 Such a proof requires the definition of the following relation for a program $M$ with unique configurations $s$:
 \begin{equation}
@@ -635,7 +631,8 @@ In order to better illustrate this, \citet{turner2004total} proposes an augmenta
 Languages such as Haskell already incorporate an expression for this idea via the notion of Monads and Monad Transformers.
 Turner aims to omit any incidence of $\bot$ in a total functional program, hence restricting the program to the use of total functions, and omitting the use of partial functions. \\
 
-While this is not feasible in practice for a general purpose programming language, it is interesting for a DSL, as all functions could be constrained to being total:
+While this is not feasible in practice for a general purpose programming language, it is interesting for a DSL, as all functions could be constrained to being total.
+This can be done through imposition of the following restrictions:
 \begin{itemize}
     \item Recursion is used to traverse data.
     \item Corecursion is used to traverse codata, where all the infinite structures (and corecursive functions) are total. 
@@ -653,7 +650,7 @@ Nevertheless, the notion of Total Functional Programming has interesting implica
 \section{Automating the Generation of the Compiler} % (fold)
 \label{sec:automating_the_generation_of_the_compiler}
 \defblock{10cm}{Compiler Generator}{
-    A compiler generator, or metacompiler, is ``a tool that constructs a compiler automatically, given a syntactic and semantic description of the source language'' \citep{brown1992actress}.
+    A compiler generator, or metacompiler, is ``a tool that constructs a compiler automatically, given a syntactic and semantic description of the source language'' \citep[pg. 95]{brown1992actress}.
 }
 
 The literature having established that it is possible to specify a language such that it terminates (and behaves as specified) for all programs in that language, some mechanism needs to exist for translating such programs into an executable form.
@@ -743,14 +740,14 @@ Such transformations, however, do not provide the same guarantees as the Metafro
 \subsection{Intermediate Representations} % (fold)
 \label{sub:intermediate_representations}
 Many compiler systems use an Intermediate Representation (IR).
-This is as it ``hides details about the target execution platform'', allowing semantic-level optimisation and analysis of the program code \citep{Zhao:2012:FLI:2103621.2103709}.
+This is as it ``hides details about the target execution platform'', allowing semantic-level optimisation and analysis of the program code \citep[pg. 427]{Zhao:2012:FLI:2103621.2103709}.
 It is, however, often the case that these IRs do not have well-defined formal semantics, precluding the proving of properties of programs expressed in these IRs. \\
 
 In an effort to formalise the LLVM IR, their Low-Level Virtual Machine, \citet{Zhao:2012:FLI:2103621.2103709} found that the aggressive optimisations performed by industrial strength compilers often had non-deterministic semantics.
 Such semantics preclude the proving of certain termination properties of the transformed programs, even if they use linguistic features that are terminating.
-Such optimisation issues can be seen with the Glasgow Haskell Compiler (GHC), where certain heavy optimisations alter the semantic meaning of programs (see Section~\ref{sub:issues_with_ghc}.\\
+Such optimisation issues can be seen with the Glasgow Haskell Compiler (GHC), where certain heavy optimisations alter the semantic meaning of programs (see \autoref{sub:issues_with_ghc}).\\
 
-While the use of IRs bring benefits in terms of semantic analysis and AVOPT, the complexity of such representations means that for a DSL-based project that it is unlikely to be worth employing one.
+While the use of IRs bring benefits in terms of semantic analysis and \gls{avopt}, the complexity of such representations means that for a DSL-based project that it is unlikely to be worth employing one.
 
 % subsection intermediate_representations (end)
 
@@ -761,7 +758,7 @@ While the use of IRs bring benefits in terms of semantic analysis and AVOPT, the
 A project such as this requires an implementation language with excellent support for symbolic manipulation, domain-specific optimisation, language parsing and control over program execution.
 While languages such as Lisp allow first-class syntax definitions, it has less library support for parsing, and less robust execution control due to the default eager evaluation semantics. \\
 
-Haskell, on the other hand, has robust support for metaprogramming, parsing and execution control, providing the \lstinline{seq} function to force evaluation of the default lazy semantics. 
+Haskell, on the other hand, has robust support for metaprogramming, parsing and execution control, providing the \mintinline{haskell}{seq} function to force evaluation of the default lazy semantics. 
 This makes Haskell an excellent choice for the building of modular language implementations \citep{hudak1996building}.\\
 
 Languages like Haskell and Lisp have excellent support for symbolic manipulation, and hence would be viable implementation languages for such a project. 
